# pocket-knife

./: .gitignore  .gitmodules  LICENSE  README.md
backend-desktop/: .gitignore  Cargo.toml  interact.values
backend-desktop/src/: main.rs  pocket.rs
backend-pocket/: .env  .gitignore  Cargo.toml  README.md  build.rs  data.json  debug.sh  deploy.sh  interact.json
backend-pocket/src/: error.rs  gamepad.rs  main.rs  pocket.rs  screen.rs
file-format/: Cargo.toml
file-format/src/: bincode.rs  error.rs  lib.rs
frontend/: .gitignore  Cargo.toml  build.rs
frontend/src/: backend.rs  error.rs  lib.rs  main.slint
manager/: Cargo.toml
manager/src/: io.rs  main.rs
