[package]
name = "pocket-knife"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
enumset = { version = "1.1.3", features = ["alloc", "std"] }
pocket-knife-frontend = { path = "../frontend" }
pocket-knife-file-format = { path = "../file-format" }
rgb565 = { version = "0.1.3", features = ["std"], default-features = false }
rustc-hash = "1.1.0"
simple_logger = "4.2.0"
i-slint-core = "=1.3.2"
i-slint-backend-winit = "=1.3.2"
slint = { version = "1.3.2", features = ["backend-winit", "renderer-software"], default-features = false }
winit = "0.28.6"
pixels = "0.13.0"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
embedded-io = { version = "0.6.1", features = ["std", "defmt-03"] }
