[package]
name = "pocket-knife"
version = "0.1.0"
resolver = "2"
edition = "2021"

[build-dependencies]
litex-pac = { path = "external/openfpga-litex/lang/rust/crates/litex-pac", features = ["rt"] }

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
embedded-io = { version = "0.6.1", default-features = false, features = ["alloc"] }
enumset = { version = "1.1.3", default-features = false, features = ["alloc"] }
litex-hal = "0.3.0"
litex-openfpga = { path = "external/openfpga-litex/lang/rust/crates/litex-openfpga", features = ["slint"] }
litex-pac = { path = "external/openfpga-litex/lang/rust/crates/litex-pac", features = ["rt"] }
pocket-knife-frontend = { path = "../frontend" }
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
slint = { version = "1.2.2", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
strum = { version = "0.25.0", default-features = false, features = ["derive"] }
