[package]
name = "pocket-knife-file-format"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "derive"] }
embedded-io = { version = "0.6.1", default-features = false, features = ["alloc"] }
