[package]
name = "pocket-knife-frontend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
slint-build = "1.2.2"

[dependencies]
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
nb = "1.1.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
slint = { version = "1.2.2", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
enumset = { version = "1.1.3", features = ["alloc"] }
tinybmp = "0.5.0"
embedded-graphics = "0.8.1"
tar-no-std = { version = "0.2.0", features = ["alloc"] }
