[package]
name = "pocket-knife-frontend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
slint-build = "1.2.2"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
embedded-alloc = "0.5.0"
embedded-graphics = "0.8.1"
embedded-io = { version = "0.6.1", default-features = false, features = ["alloc"] }
pocket-knife-file-format = { path = "../file-format" }
rgb = { version = "0.8.37", default-features = false }
slint = { version = "1.2.2", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
tinybmp = "0.5.0"
