[package]
name = "pocket-knife-manager"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "wrap_help", "unicode"] }
embedded-io = { version = "0.6.1", features = ["std", "defmt-03"] }
pocket-knife-file-format = { path = "../file-format" }
serde = { version = "1.0.195", features = ["derive"] }
